added random search to options strategies

--- a/options/dev.ipynb
+++ b/options/dev.ipynb
@@ -1843,8 +1843,71 @@
     "def ND(X:float)->float:\n",
     "    ND = 1 / Sqr(2 * np.pi) * Exp(-X ^ 2 / 2)\n",
     "    return ND\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Programmer Espen Gaarder Haug\n",
+    "# Copyright Espen Gaarder Haug  2006\n",
+    "\n",
+    "\n",
+    "# Partial-time fixed strike lookback options\n",
+    "def PartialFixedLB(CallPutFlag:str, S:float, X:float, t1:float,T2:float, r:float, b:float, v:float):\n",
+    "\n",
+    "    d1 = (Log(S / X) + (b + v ^ 2 / 2) * T2) / (v * Sqr(T2))\n",
+    "    d2 = d1 - v * Sqr(T2)\n",
+    "    e1 = ((b + v ^ 2 / 2) * (T2 - t1)) / (v * Sqr(T2 - t1))\n",
+    "    e2 = e1 - v * Sqr(T2 - t1)\n",
+    "    f1 = (Log(S / X) + (b + v ^ 2 / 2) * t1) / (v * Sqr(t1))\n",
+    "    f2 = f1 - v * Sqr(t1)\n",
+    "    if  CallPutFlag == \"c\":\n",
+    "        PartialFixedLB = S * Exp((b - r) * T2) * CND(d1) - Exp(-r * T2) * X * CND(d2) + S * Exp(-r * T2) * v ^ 2 / (2 * b) * (-(S / X) ^ (-2 * b / v ^ 2) * CBND(d1 - 2 * b * Sqr(T2) / v, -f1 + 2 * b * Sqr(t1) / v, -Sqr(t1 / T2)) + Exp(b * T2) * CBND(e1, d1, Sqr(1 - t1 / T2))) - S * Exp((b - r) * T2) * CBND(-e1, d1, -Sqr(1 - t1 / T2)) - X * Exp(-r * T2) * CBND(f2, -d2, -Sqr(t1 / T2)) + Exp(-b * (T2 - t1)) * (1 - v ^ 2 / (2 * b)) * S * Exp((b - r) * T2) * CND(f1) * CND(-e2)\n",
+    "    elif CallPutFlag == \"p\":\n",
+    "        PartialFixedLB = X * Exp(-r * T2) * CND(-d2) - S * Exp((b - r) * T2) * CND(-d1) + S * Exp(-r * T2) * v ^ 2 / (2 * b) * ((S / X) ^ (-2 * b / v ^ 2) * CBND(-d1 + 2 * b * Sqr(T2) / v, f1 - 2 * b * Sqr(t1) / v, -Sqr(t1 / T2)) - Exp(b * T2) * CBND(-e1, -d1, Sqr(1 - t1 / T2))) + S * Exp((b - r) * T2) * CBND(e1, -d1, -Sqr(1 - t1 / T2)) + X * Exp(-r * T2) * CBND(-f2, d2, -Sqr(t1 / T2)) - Exp(-b * (T2 - t1)) * (1 - v ^ 2 / (2 * b)) * S * Exp((b - r) * T2) * CND(-f1) * CND(e2)\n",
+    "    return PartialFixedLB\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Down-and-in', 'call', 'cdi'],\n",
+       " ['Up-and-in', 'call', 'cui'],\n",
+       " ['Down-and-in', 'put', 'pdi'],\n",
+       " ['Up-and-in', 'put', 'pui'],\n",
+       " ['Down-and-out', 'call', 'cdo'],\n",
+       " ['Up-and-out', 'call', 'cuo'],\n",
+       " ['Down-and-out', 'put', 'pdo'],\n",
+       " ['Up-and-out', 'put', 'puo']]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[l.split(\" \") for l in \"\"\"Down-and-in call cdi\n",
+    "Up-and-in call cui\n",
+    "Down-and-in put pdi\n",
+    "Up-and-in put pui\n",
+    "Down-and-out call cdo\n",
+    "Up-and-out call cuo\n",
+    "Down-and-out put pdo\n",
+    "Up-and-out put puo\"\"\".split(\"\\n\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
